Fix file diff box header missalignment.

--- a/web_src/less/_repository.less
+++ b/web_src/less/_repository.less
@@ -1746,6 +1746,7 @@
   .diff-file-box {
     .header {
       background-color: #f7f7f7;
+      width: 100%;
     }
 
     .file-body.file-code {
